@@ -1,3 +1,5 @@
+from __future__ import with_statement
+
 from mako.template import Template
 import sys
 import os
