@@ -1,3 +1,5 @@
+from __future__ import with_statement
+
 from tests import clear_staging_env, staging_env, \
     _no_sql_testing_config, sqlite_db, eq_, ne_, capture_context_buffer, \
     three_rev_fixture
